# twilights_program

./: .gitignore  Cargo.toml  Makefile  README.md  consts.go  go.mod  io.github.SchokiCoder.twilights_program.desktop  io.github.SchokiCoder.twilights_program.metainfo.xml  main.go  pony_model.go  sprite.go  todo.md
assets/: hearts.xcf  twi.xcf
docs/: rants.md  rewrite.md  todo.md
sounds/: Mappy_Music_Copyright.txt
src/: main.rs
