# SPDX-License-Identifier: GPL-2.0-or-later
# Copyright (C) 2024  Andy Frank Schoknecht

[package]
name = "twilights_program"
version = "0.0.0"
authors = ["SchokiCoder <afschoknecht@tutanota.com>"]
repository = "https://github.com/SchokiCoder/twilights_program"
edition = "2021"
license = "GPL-2.0-or-later"
readme = "README.md"
publish = false

[dependencies]
iced = "0.10.*"
